Ensure profile view looks good on mobile
There was one too many sections encasing the content.

Also cleaning up some money displays that I didn't catch in the
last commit.

--- a/src/scss/account.scss
+++ b/src/scss/account.scss
@@ -6,3 +6,11 @@
     }
     font-size: 2.5rem;
 }
+li.currency {
+    sup {
+        font-size: 0.7rem;
+        position: relative;
+        top: 0.2rem;
+    }
+    font-size: 1rem;
+}
